--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,78 @@
 name: PlatformIO Build
 
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    push:
+        branches: [ main, master ]
+    pull_request:
+        branches: [ main, master ]
+
+env:
+    Setup206_Lilygo_TDisplay_S3: "-D USER_SETUP_LOADED=1
+                                  -D ST7789_DRIVER
+                                  -D INIT_SEQUENCE_3
+                                  -D CGRAM_OFFSET
+                                  -D TFT_RGB_ORDER=TFT_RGB
+                                  -D TFT_INVERSION_ON
+                                  -D TFT_PARALLEL_8_BIT
+                                  -D TFT_WIDTH=170
+                                  -D TFT_HEIGHT=320
+                                  -D TFT_CS=6
+                                  -D TFT_DC=7
+                                  -D TFT_RST=5
+                                  -D TFT_WR=8
+                                  -D TFT_RD=9
+                                  -D TFT_D0=39
+                                  -D TFT_D1=40
+                                  -D TFT_D2=41
+                                  -D TFT_D3=42
+                                  -D TFT_D4=45
+                                  -D TFT_D5=46
+                                  -D TFT_D6=47
+                                  -D TFT_D7=48
+                                  -D TFT_BL=38
+                                  -D TFT_BACKLIGHT_ON=HIGH
+                                  -D LOAD_GLCD
+                                  -D LOAD_FONT2
+                                  -D LOAD_FONT4
+                                  -D LOAD_FONT6
+                                  -D LOAD_FONT7
+                                  -D LOAD_FONT8
+                                  -D LOAD_GFXFF
+                                  -D SMOOTH_FONT"
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
 
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+            - name: Cache pip
+              uses: actions/cache@v4
+              with:
+                  path: ~/.cache/pip
+                  key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+                  restore-keys: |
+                    ${{ runner.os }}-pip-
 
-      - name: Cache PlatformIO
-        uses: actions/cache@v4
-        with:
-          path: ~/.platformio
-          key: ${{ runner.os }}-platformio-${{ hashFiles('**/platformio.ini') }}
+            - name: Cache PlatformIO
+              uses: actions/cache@v4
+              with:
+                  path: ~/.platformio
+                  key: ${{ runner.os }}-platformio-${{ hashFiles('**/platformio.ini') }}
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                  python-version: '3.12'
 
-      - name: Install PlatformIO
-        run: |
-          python -m pip install --upgrade pip
-          pip install --upgrade platformio
+            - name: Install PlatformIO
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install --upgrade platformio
 
-      - name: Run PlatformIO Build
-        run: pio run
+            - name: Run PlatformIO Build
+              env:
+                  PLATFORMIO_BUILD_FLAGS: ${{ env.Setup206_Lilygo_TDisplay_S3 }}
+              run: pio run
