--- a/platformio.ini
+++ b/platformio.ini
@@ -20,43 +20,38 @@ lib_deps =
 	tzapu/WiFiManager@^2.0.17
 	bodmer/TFT_eSPI@^2.5.43
 	bblanchon/ArduinoJson@7.4.2
-
-; If you are building locally, you need to configure the TFT_eSPI library after installing it.
-; There are 2 ways to configure the library:
-;   1) Configure the TFT_eSPI library locally (using the User_Setup_Select.h) and select the correct header
-;      for the Lilygot T Display S3 board the header is setup id 206
-;   2) Configure he correct PINS here (uncomment the following lines and change the values)
-
-;build_flags =
-;    -D USER_SETUP_LOADED
-;    -D ST7789_DRIVER
-;    -D INIT_SEQUENCE_3
-;    -D CGRAM_OFFSET
-;    -D TFT_RGB_ORDER=TFT_RGB
-;    -D TFT_INVERSION_ON
-;    -D TFT_PARALLEL_8_BIT
-;    -D TFT_WIDTH=170
-;    -D TFT_HEIGHT=320
-;    -D TFT_CS=6
-;    -D TFT_DC=7
-;    -D TFT_RST=5
-;    -D TFT_WR=8
-;    -D TFT_RD=9
-;    -D TFT_D0=39
-;    -D TFT_D1=40
-;    -D TFT_D2=41
-;    -D TFT_D3=42
-;    -D TFT_D4=45
-;    -D TFT_D5=46
-;    -D TFT_D6=47
-;    -D TFT_D7=48
-;    -D TFT_BL=38
-;    -D TFT_BACKLIGHT_ON=HIGH
-;    -D LOAD_GLCD
-;    -D LOAD_FONT2
-;    -D LOAD_FONT4
-;    -D LOAD_FONT6
-;    -D LOAD_FONT7
-;    -D LOAD_FONT8
-;    -D LOAD_GFXFF
-;    -D SMOOTH_FONT
+	links2004/WebSockets@^2.7.2
+	gilmaimon/ArduinoWebsockets@^0.5.4
+build_flags = 
+	;    -D USER_SETUP_LOADED
+	;    -D ST7789_DRIVER
+	;    -D INIT_SEQUENCE_3
+	;    -D CGRAM_OFFSET
+	;    -D TFT_RGB_ORDER=TFT_RGB
+	;    -D TFT_INVERSION_ON
+	;    -D TFT_PARALLEL_8_BIT
+	;    -D TFT_WIDTH=170
+	;    -D TFT_HEIGHT=320
+	;    -D TFT_CS=6
+	;    -D TFT_DC=7
+	;    -D TFT_RST=5
+	;    -D TFT_WR=8
+	;    -D TFT_RD=9
+	;    -D TFT_D0=39
+	;    -D TFT_D1=40
+	;    -D TFT_D2=41
+	;    -D TFT_D3=42
+	;    -D TFT_D4=45
+	;    -D TFT_D5=46
+	;    -D TFT_D6=47
+	;    -D TFT_D7=48
+	;    -D TFT_BL=38
+	;    -D TFT_BACKLIGHT_ON=HIGH
+	;    -D LOAD_GLCD
+	;    -D LOAD_FONT2
+	;    -D LOAD_FONT4
+	;    -D LOAD_FONT6
+	;    -D LOAD_FONT7
+	;    -D LOAD_FONT8
+	;    -D LOAD_GFXFF
+	;    -D SMOOTH_FONT
